# haskell_playground

./: README.md  algebraic_datatypes.hs  as_patterns.hs  binaryTree.hs  cipher.hs  datatype.hs  datatypes_example.hs  either_error_example.hs  factScan.hs  fiboScan.hs  flexibleInstances.hs  fold_chapter_ex.hs  fold_ex1.hs  generalizedNewtypeDeriving.hs  guard.hs  higer_order_fuc.hs  huttons_razor.hs  infix.hs  jammin.hs  join.hs  lambda.hs  learn.hs  let.hs  list_comph.hs  logical_list.hs  main.hs  myFold.hs  mywords.hs  myzip.hs  newtype.hs  parametric_polymorphic.hs  phone_keyboard.hs  pointfree.hs  record.hs  safe_head.hs  splitOn.hs  str_ex.hs  string_processing.hs  string_space.hs  test.hs  (+6 more)
12_signaling_adversity/: binary_tree.hs  either_library.hs  maybe_library.hs  natural_numbers.hs  string_processing.hs  unfolds.hs
13_building_projects/: cipher.hs  palindrome.hs  person.hs
14_testing/: aTozString.hs  arbitraryInstances.hs  coarbitrary.hs  fool.hs  halfQuickCheck.hs  idempotence.hs  listOrdered.hs
14_testing/addition/: Addition.hs  addition.cabal
15_monoid_semigroup/: badMonoid.hs  exercise.hs  madness.hs  optionalMonoid.hs  quickCheckMonoid.hs
16_functor/: flipFunctor.hs  functorIO.hs  heavyLifting.hs  instancesOfFunctor.hs  naturalTransformation.hs  possibly.hs  quickCheckFunctor.hs  replaceExperiment.hs  sum.hs  tupleAndEither.hs  wrap.hs
17_applicative/: badMonoid.hs  combinations.hs  constantExercise.hs  cow.hs  fixerUpper.hs  identityExercise.hs  instances.hs  listApplicative.hs  lookup.hs  lookupsExercise1.hs  lookupsExercise2.hs  makePerson.hs  (+3 more)
(+28 files in other folders)
